--- a/css/inner.css
+++ b/css/inner.css
@@ -1,155 +1,155 @@
 /**/
 @-webkit-keyframes rotate {
-  /* line 28, D:/Git/teleus/scss/_base.scss */
+  /* line 28, ../scss/_base.scss */
   0% {
     -webkit-transform: rotate(-10deg);
   }
 
-  /* line 31, D:/Git/teleus/scss/_base.scss */
+  /* line 31, ../scss/_base.scss */
   10% {
     -webkit-transform: rotate(0deg);
   }
 
-  /* line 34, D:/Git/teleus/scss/_base.scss */
+  /* line 34, ../scss/_base.scss */
   20% {
     -webkit-transform: rotate(10deg);
   }
 
-  /* line 37, D:/Git/teleus/scss/_base.scss */
+  /* line 37, ../scss/_base.scss */
   30% {
     -webkit-transform: rotate(0deg);
   }
 
-  /* line 40, D:/Git/teleus/scss/_base.scss */
+  /* line 40, ../scss/_base.scss */
   40% {
     -webkit-transform: rotate(-10deg);
   }
 
-  /* line 43, D:/Git/teleus/scss/_base.scss */
+  /* line 43, ../scss/_base.scss */
   50% {
     -webkit-transform: rotate(0deg);
   }
 
-  /* line 46, D:/Git/teleus/scss/_base.scss */
+  /* line 46, ../scss/_base.scss */
   60% {
     -webkit-transform: rotate(10deg);
   }
 
-  /* line 49, D:/Git/teleus/scss/_base.scss */
+  /* line 49, ../scss/_base.scss */
   70% {
     -webkit-transform: rotate(0deg);
   }
 
-  /* line 52, D:/Git/teleus/scss/_base.scss */
+  /* line 52, ../scss/_base.scss */
   80% {
     -webkit-transform: rotate(-10deg);
   }
 
-  /* line 55, D:/Git/teleus/scss/_base.scss */
+  /* line 55, ../scss/_base.scss */
   100% {
     -webkit-transform: rotate(0deg);
   }
 }
 
 @-moz-keyframes rotate {
-  /* line 60, D:/Git/teleus/scss/_base.scss */
+  /* line 60, ../scss/_base.scss */
   0% {
     -moz-transform: rotate(-10deg);
   }
 
-  /* line 63, D:/Git/teleus/scss/_base.scss */
+  /* line 63, ../scss/_base.scss */
   10% {
     -moz-transform: rotate(0deg);
   }
 
-  /* line 66, D:/Git/teleus/scss/_base.scss */
+  /* line 66, ../scss/_base.scss */
   20% {
     -moz-transform: rotate(10deg);
   }
 
-  /* line 69, D:/Git/teleus/scss/_base.scss */
+  /* line 69, ../scss/_base.scss */
   30% {
     -moz-transform: rotate(0deg);
   }
 
-  /* line 72, D:/Git/teleus/scss/_base.scss */
+  /* line 72, ../scss/_base.scss */
   40% {
     -moz-transform: rotate(-10deg);
   }
 
-  /* line 75, D:/Git/teleus/scss/_base.scss */
+  /* line 75, ../scss/_base.scss */
   50% {
     -moz-transform: rotate(0deg);
   }
 
-  /* line 78, D:/Git/teleus/scss/_base.scss */
+  /* line 78, ../scss/_base.scss */
   60% {
     -moz-transform: rotate(10deg);
   }
 
-  /* line 81, D:/Git/teleus/scss/_base.scss */
+  /* line 81, ../scss/_base.scss */
   70% {
     -moz-transform: rotate(0deg);
   }
 
-  /* line 84, D:/Git/teleus/scss/_base.scss */
+  /* line 84, ../scss/_base.scss */
   80% {
     -moz-transform: rotate(-10deg);
   }
 
-  /* line 87, D:/Git/teleus/scss/_base.scss */
+  /* line 87, ../scss/_base.scss */
   100% {
     -moz-transform: rotate(0deg);
   }
 }
 
 @-o-keyframes rotate {
-  /* line 92, D:/Git/teleus/scss/_base.scss */
+  /* line 92, ../scss/_base.scss */
   0% {
     -o-transform: rotate(-10deg);
   }
 
-  /* line 95, D:/Git/teleus/scss/_base.scss */
+  /* line 95, ../scss/_base.scss */
   10% {
     -o-transform: rotate(0deg);
   }
 
-  /* line 98, D:/Git/teleus/scss/_base.scss */
+  /* line 98, ../scss/_base.scss */
   20% {
     -o-transform: rotate(10deg);
   }
 
-  /* line 101, D:/Git/teleus/scss/_base.scss */
+  /* line 101, ../scss/_base.scss */
   30% {
     -o-transform: rotate(0deg);
   }
 
-  /* line 104, D:/Git/teleus/scss/_base.scss */
+  /* line 104, ../scss/_base.scss */
   40% {
     -o-transform: rotate(-10deg);
   }
 
-  /* line 107, D:/Git/teleus/scss/_base.scss */
+  /* line 107, ../scss/_base.scss */
   50% {
     -o-transform: rotate(0deg);
   }
 
-  /* line 110, D:/Git/teleus/scss/_base.scss */
+  /* line 110, ../scss/_base.scss */
   60% {
     -o-transform: rotate(10deg);
   }
 
-  /* line 113, D:/Git/teleus/scss/_base.scss */
+  /* line 113, ../scss/_base.scss */
   70% {
     -o-transform: rotate(0deg);
   }
 
-  /* line 116, D:/Git/teleus/scss/_base.scss */
+  /* line 116, ../scss/_base.scss */
   80% {
     -o-transform: rotate(-10deg);
   }
 
-  /* line 119, D:/Git/teleus/scss/_base.scss */
+  /* line 119, ../scss/_base.scss */
   100% {
     -o-transform: rotate(0deg);
   }
@@ -181,87 +181,88 @@
   border: 1px solid #ae6c00;
   line-height: 30px;
   font-weight: bold;
+  padding-left: 33px;
 }
-/* line 24, ../scss/inner.scss */
+/* line 25, ../scss/inner.scss */
 .tabs__content_sb .btn:active {
   line-height: 32px;
 }
 
-/* line 29, ../scss/inner.scss */
+/* line 30, ../scss/inner.scss */
 .banner {
   height: 250px;
   margin-bottom: 40px;
   background: #ebebeb;
 }
 
-/* line 34, ../scss/inner.scss */
+/* line 35, ../scss/inner.scss */
 .pagination {
   position: relative;
   margin-top: 35px;
   padding-bottom: 50px;
   border-top: 1px solid #d3d3d3;
 }
-/* line 39, ../scss/inner.scss */
+/* line 40, ../scss/inner.scss */
 .pagination p {
   padding: 15px 0;
   overflow: hidden;
 }
-/* line 42, ../scss/inner.scss */
+/* line 43, ../scss/inner.scss */
 .pagination p b {
   float: left;
   font-weight: normal;
 }
-/* line 46, ../scss/inner.scss */
+/* line 47, ../scss/inner.scss */
 .pagination p span {
   float: right;
   color: #acacac;
 }
-/* line 51, ../scss/inner.scss */
+/* line 52, ../scss/inner.scss */
 .pagination .pagination__nav {
   left: 0;
   top: 75px;
 }
 
-/* line 57, ../scss/inner.scss */
+/* line 58, ../scss/inner.scss */
 .pagination__list a {
   margin-right: 8px;
   font-weight: bold;
 }
-/* line 61, ../scss/inner.scss */
+/* line 62, ../scss/inner.scss */
 .pagination__list .active {
   color: #ffb21f;
 }
 
 /*article*/
-/* line 67, ../scss/inner.scss */
+/* line 68, ../scss/inner.scss */
 .article .h2 {
   line-height: 1.3;
 }
 
-/* line 72, ../scss/inner.scss */
+/* line 73, ../scss/inner.scss */
 .article__content img {
   float: left;
   margin: 0 30px 15px 0;
   border: 1px solid #939393;
 }
-/* line 77, ../scss/inner.scss */
+/* line 78, ../scss/inner.scss */
 .article__content h4 {
   margin-bottom: 15px;
   font-size: 16px;
 }
-/* line 81, ../scss/inner.scss */
+/* line 82, ../scss/inner.scss */
 .article__content p {
   margin-bottom: 15px;
   line-height: 1.5;
 }
-/* line 85, ../scss/inner.scss */
+/* line 86, ../scss/inner.scss */
 .article__content blockquote {
   padding-left: 35px;
   margin-bottom: 15px;
   border-left: 3px solid #d3d3d3;
   line-height: 1.5;
 }
-/* line 92, ../scss/inner.scss */
+/* line 93, ../scss/inner.scss */
 .article__content table {
   width: 100%;
   margin-bottom: 20px;
@@ -270,40 +271,40 @@
   border-top: 1px solid #d3d3d3;
   text-align: left;
 }
-/* line 100, ../scss/inner.scss */
+/* line 101, ../scss/inner.scss */
 .article__content tr {
   border-bottom: 1px solid #d3d3d3;
 }
-/* line 102, ../scss/inner.scss */
+/* line 103, ../scss/inner.scss */
 .article__content tr:nth-child(even) {
   background: #f8f8f8;
 }
-/* line 106, ../scss/inner.scss */
+/* line 107, ../scss/inner.scss */
 .article__content td, .article__content th {
   padding: 15px;
 }
-/* line 108, ../scss/inner.scss */
+/* line 109, ../scss/inner.scss */
 .article__content td:first-child, .article__content th:first-child {
   width: 380px;
 }
-/* line 112, ../scss/inner.scss */
+/* line 113, ../scss/inner.scss */
 .article__content th {
   font-style: italic;
   color: #acacac;
   font-weight: normal;
 }
 
-/* line 118, ../scss/inner.scss */
+/* line 119, ../scss/inner.scss */
 .article__date {
   margin-bottom: 20px;
   overflow: hidden;
 }
-/* line 121, ../scss/inner.scss */
+/* line 122, ../scss/inner.scss */
 .article__date span {
   float: left;
   color: #acacac;
 }
-/* line 125, ../scss/inner.scss */
+/* line 126, ../scss/inner.scss */
 .article__date a {
   float: right;
   border-bottom: 1px solid #BBE4F1;
@@ -314,41 +315,41 @@
   -ms-transition: border-color 0.5s linear;
   transition: border-color 0.5s linear;
 }
-/* line 130, ../scss/inner.scss */
+/* line 131, ../scss/inner.scss */
 .article__date a:hover {
   border-bottom: 1px solid #09c;
 }
 
 /*add comment*/
-/* line 136, ../scss/inner.scss */
+/* line 137, ../scss/inner.scss */
 .add-comm {
   margin-top: 20px;
   padding: 0 20px;
   background: #fff2b6;
 }
-/* line 140, ../scss/inner.scss */
+/* line 141, ../scss/inner.scss */
 .add-comm h3 {
   padding: 15px 0;
 }
 
-/* line 144, ../scss/inner.scss */
+/* line 145, ../scss/inner.scss */
 .add-comm__txt {
   border: 1px solid #d0d0d0;
   overflow: hidden;
 }
-/* line 147, ../scss/inner.scss */
+/* line 148, ../scss/inner.scss */
 .add-comm__txt textarea {
   width: 100%;
   height: 200px;
 }
 
-/* line 152, ../scss/inner.scss */
+/* line 153, ../scss/inner.scss */
 .add-comm__btn {
   position: relative;
   padding: 20px 0;
   overflow: hidden;
 }
-/* line 156, ../scss/inner.scss */
+/* line 157, ../scss/inner.scss */
 .add-comm__btn .btn {
   float: left;
   width: 95px;
@@ -358,76 +359,76 @@
   line-height: 28px;
   cursor: pointer;
 }
-/* line 164, ../scss/inner.scss */
+/* line 165, ../scss/inner.scss */
 .add-comm__btn .btn:active {
   line-height: 30px;
 }
-/* line 168, ../scss/inner.scss */
+/* line 169, ../scss/inner.scss */
 .add-comm__btn p {
   float: left;
   margin: 0;
   line-height: 30px;
 }
-/* line 173, ../scss/inner.scss */
+/* line 174, ../scss/inner.scss */
 .add-comm__btn a {
   margin-left: 25px;
   border-bottom: 1px solid #BBE4F1;
 }
-/* line 176, ../scss/inner.scss */
+/* line 177, ../scss/inner.scss */
 .add-comm__btn a i {
-  background: url('../img/icons-sdc326c2acf.png') 0 -716px no-repeat;
+  background: url('../img/icons-s65594b9100.png') 0 -842px no-repeat;
   width: 14px;
   height: 16px;
 }
 
 /*comments*/
-/* line 183, ../scss/inner.scss */
+/* line 184, ../scss/inner.scss */
 .comms h3 {
   margin: 35px 0;
 }
-/* line 187, ../scss/inner.scss */
+/* line 188, ../scss/inner.scss */
 .comms .block span {
   display: block;
   margin-bottom: 20px;
 }
-/* line 192, ../scss/inner.scss */
+/* line 193, ../scss/inner.scss */
 .comms p {
   margin-bottom: 10px;
 }
 
-/* line 196, ../scss/inner.scss */
+/* line 197, ../scss/inner.scss */
 .all-reviews {
   margin-top: 30px;
   padding-bottom: 5px;
   overflow: hidden;
 }
-/* line 200, ../scss/inner.scss */
+/* line 201, ../scss/inner.scss */
 .all-reviews a {
   float: left;
 }
-/* line 203, ../scss/inner.scss */
+/* line 204, ../scss/inner.scss */
 .all-reviews .all-reviews__link {
   margin: 6px 0 0 30px;
   border-bottom: 1px solid #BBE4F1;
 }
 
 /*text area*/
-/* line 209, ../scss/inner.scss */
+/* line 210, ../scss/inner.scss */
 .jHtmlArea {
   background: #fff;
 }
-/* line 211, ../scss/inner.scss */
+/* line 212, ../scss/inner.scss */
 .jHtmlArea iframe {
   border: none;
 }
-/* line 215, ../scss/inner.scss */
+/* line 216, ../scss/inner.scss */
 .jHtmlArea .ToolBar ul {
   padding: 5px;
   background: #f8f8f8;
   border-bottom: 1px solid #e5e5e5;
   overflow: hidden;
 }
-/* line 221, ../scss/inner.scss */
+/* line 222, ../scss/inner.scss */
 .jHtmlArea .ToolBar li {
   float: left;
   margin-right: 5px;
@@ -446,55 +447,55 @@
   background-image: linear-gradient(#ffffff, #ebeaea);
   border: 1px solid #bebebe;
 }
-/* line 228, ../scss/inner.scss */
+/* line 229, ../scss/inner.scss */
 .jHtmlArea .ToolBar li:hover {
   border: solid 1px #8d8d8d;
 }
-/* line 232, ../scss/inner.scss */
+/* line 233, ../scss/inner.scss */
 .jHtmlArea .ToolBar a {
   display: block;
   width: 23px;
   height: 23px;
 }
-/* line 237, ../scss/inner.scss */
+/* line 238, ../scss/inner.scss */
 .jHtmlArea .ToolBar .bold {
-  background: url('../img/icons-sdc326c2acf.png') 0 -879px no-repeat;
+  background: url('../img/icons-s65594b9100.png') 0 -1026px no-repeat;
   width: 23px;
   height: 23px;
 }
-/* line 240, ../scss/inner.scss */
+/* line 241, ../scss/inner.scss */
 .jHtmlArea .ToolBar .italic {
-  background: url('../img/icons-sdc326c2acf.png') 0 -935px no-repeat;
+  background: url('../img/icons-s65594b9100.png') 0 -1117px no-repeat;
   width: 23px;
   height: 23px;
 }
-/* line 243, ../scss/inner.scss */
+/* line 244, ../scss/inner.scss */
 .jHtmlArea .ToolBar .underline {
-  background: url('../img/icons-sdc326c2acf.png') 0 -758px no-repeat;
+  background: url('../img/icons-s65594b9100.png') 0 -905px no-repeat;
   width: 23px;
   height: 23px;
 }
-/* line 246, ../scss/inner.scss */
+/* line 247, ../scss/inner.scss */
 .jHtmlArea .ToolBar .strikethrough {
-  background: url('../img/icons-sdc326c2acf.png') 0 -667px no-repeat;
+  background: url('../img/icons-s65594b9100.png') 0 -793px no-repeat;
   width: 23px;
   height: 23px;
 }
-/* line 249, ../scss/inner.scss */
+/* line 250, ../scss/inner.scss */
 .jHtmlArea .ToolBar .link {
-  background: url('../img/icons-sdc326c2acf.png') 0 -576px no-repeat;
+  background: url('../img/icons-s65594b9100.png') 0 -681px no-repeat;
   width: 23px;
   height: 23px;
 }
-/* line 252, ../scss/inner.scss */
+/* line 253, ../scss/inner.scss */
 .jHtmlArea .ToolBar .html {
-  background: url('../img/icons-sdc326c2acf.png') 0 -786px no-repeat;
+  background: url('../img/icons-s65594b9100.png') 0 -933px no-repeat;
   width: 55px;
   height: 23px;
 }
-/* line 255, ../scss/inner.scss */
+/* line 256, ../scss/inner.scss */
 .jHtmlArea .ToolBar .quote {
-  background: url('../img/icons-sdc326c2acf.png') 0 -907px no-repeat;
+  background: url('../img/icons-s65594b9100.png') 0 -1054px no-repeat;
   width: 23px;
   height: 23px;
 }
