--- a/css/main.css
+++ b/css/main.css
@@ -1,155 +1,155 @@
 /**/
 @-webkit-keyframes rotate {
-  /* line 28, D:/Git/teleus/scss/_base.scss */
+  /* line 28, ../scss/_base.scss */
   0% {
     -webkit-transform: rotate(-10deg);
   }
 
-  /* line 31, D:/Git/teleus/scss/_base.scss */
+  /* line 31, ../scss/_base.scss */
   10% {
     -webkit-transform: rotate(0deg);
   }
 
-  /* line 34, D:/Git/teleus/scss/_base.scss */
+  /* line 34, ../scss/_base.scss */
   20% {
     -webkit-transform: rotate(10deg);
   }
 
-  /* line 37, D:/Git/teleus/scss/_base.scss */
+  /* line 37, ../scss/_base.scss */
   30% {
     -webkit-transform: rotate(0deg);
   }
 
-  /* line 40, D:/Git/teleus/scss/_base.scss */
+  /* line 40, ../scss/_base.scss */
   40% {
     -webkit-transform: rotate(-10deg);
   }
 
-  /* line 43, D:/Git/teleus/scss/_base.scss */
+  /* line 43, ../scss/_base.scss */
   50% {
     -webkit-transform: rotate(0deg);
   }
 
-  /* line 46, D:/Git/teleus/scss/_base.scss */
+  /* line 46, ../scss/_base.scss */
   60% {
     -webkit-transform: rotate(10deg);
   }
 
-  /* line 49, D:/Git/teleus/scss/_base.scss */
+  /* line 49, ../scss/_base.scss */
   70% {
     -webkit-transform: rotate(0deg);
   }
 
-  /* line 52, D:/Git/teleus/scss/_base.scss */
+  /* line 52, ../scss/_base.scss */
   80% {
     -webkit-transform: rotate(-10deg);
   }
 
-  /* line 55, D:/Git/teleus/scss/_base.scss */
+  /* line 55, ../scss/_base.scss */
   100% {
     -webkit-transform: rotate(0deg);
   }
 }
 
 @-moz-keyframes rotate {
-  /* line 60, D:/Git/teleus/scss/_base.scss */
+  /* line 60, ../scss/_base.scss */
   0% {
     -moz-transform: rotate(-10deg);
   }
 
-  /* line 63, D:/Git/teleus/scss/_base.scss */
+  /* line 63, ../scss/_base.scss */
   10% {
     -moz-transform: rotate(0deg);
   }
 
-  /* line 66, D:/Git/teleus/scss/_base.scss */
+  /* line 66, ../scss/_base.scss */
   20% {
     -moz-transform: rotate(10deg);
   }
 
-  /* line 69, D:/Git/teleus/scss/_base.scss */
+  /* line 69, ../scss/_base.scss */
   30% {
     -moz-transform: rotate(0deg);
   }
 
-  /* line 72, D:/Git/teleus/scss/_base.scss */
+  /* line 72, ../scss/_base.scss */
   40% {
     -moz-transform: rotate(-10deg);
   }
 
-  /* line 75, D:/Git/teleus/scss/_base.scss */
+  /* line 75, ../scss/_base.scss */
   50% {
     -moz-transform: rotate(0deg);
   }
 
-  /* line 78, D:/Git/teleus/scss/_base.scss */
+  /* line 78, ../scss/_base.scss */
   60% {
     -moz-transform: rotate(10deg);
   }
 
-  /* line 81, D:/Git/teleus/scss/_base.scss */
+  /* line 81, ../scss/_base.scss */
   70% {
     -moz-transform: rotate(0deg);
   }
 
-  /* line 84, D:/Git/teleus/scss/_base.scss */
+  /* line 84, ../scss/_base.scss */
   80% {
     -moz-transform: rotate(-10deg);
   }
 
-  /* line 87, D:/Git/teleus/scss/_base.scss */
+  /* line 87, ../scss/_base.scss */
   100% {
     -moz-transform: rotate(0deg);
   }
 }
 
 @-o-keyframes rotate {
-  /* line 92, D:/Git/teleus/scss/_base.scss */
+  /* line 92, ../scss/_base.scss */
   0% {
     -o-transform: rotate(-10deg);
   }
 
-  /* line 95, D:/Git/teleus/scss/_base.scss */
+  /* line 95, ../scss/_base.scss */
   10% {
     -o-transform: rotate(0deg);
   }
 
-  /* line 98, D:/Git/teleus/scss/_base.scss */
+  /* line 98, ../scss/_base.scss */
   20% {
     -o-transform: rotate(10deg);
   }
 
-  /* line 101, D:/Git/teleus/scss/_base.scss */
+  /* line 101, ../scss/_base.scss */
   30% {
     -o-transform: rotate(0deg);
   }
 
-  /* line 104, D:/Git/teleus/scss/_base.scss */
+  /* line 104, ../scss/_base.scss */
   40% {
     -o-transform: rotate(-10deg);
   }
 
-  /* line 107, D:/Git/teleus/scss/_base.scss */
+  /* line 107, ../scss/_base.scss */
   50% {
     -o-transform: rotate(0deg);
   }
 
-  /* line 110, D:/Git/teleus/scss/_base.scss */
+  /* line 110, ../scss/_base.scss */
   60% {
     -o-transform: rotate(10deg);
   }
 
-  /* line 113, D:/Git/teleus/scss/_base.scss */
+  /* line 113, ../scss/_base.scss */
   70% {
     -o-transform: rotate(0deg);
   }
 
-  /* line 116, D:/Git/teleus/scss/_base.scss */
+  /* line 116, ../scss/_base.scss */
   80% {
     -o-transform: rotate(-10deg);
   }
 
-  /* line 119, D:/Git/teleus/scss/_base.scss */
+  /* line 119, ../scss/_base.scss */
   100% {
     -o-transform: rotate(0deg);
   }
@@ -292,13 +292,13 @@
 }
 /* line 81, ../scss/main.scss */
 .slider__nav .disabled .slider__prev-l, .slider__nav .disabled .pagination__prev-l, .pagination__nav .disabled .slider__prev-l, .pagination__nav .disabled .pagination__prev-l {
-  background: url('../img/icons-sdc326c2acf.png') 0 -1005px no-repeat;
+  background: url('../img/icons-s65594b9100.png') 0 -1187px no-repeat;
   width: 4px;
   height: 7px;
 }
 /* line 84, ../scss/main.scss */
 .slider__nav .disabled .slider__next-r, .slider__nav .disabled .pagination__prev-r, .pagination__nav .disabled .slider__next-r, .pagination__nav .disabled .pagination__prev-r {
-  background: url('../img/icons-sdc326c2acf.png') 0 -981px no-repeat;
+  background: url('../img/icons-s65594b9100.png') 0 -1163px no-repeat;
   width: 4px;
   height: 7px;
 }
@@ -340,14 +340,14 @@
 
 /* line 106, ../scss/main.scss */
 .slider__prev-l, .pagination__prev-l {
-  background: url('../img/icons-sdc326c2acf.png') 0 -993px no-repeat;
+  background: url('../img/icons-s65594b9100.png') 0 -1175px no-repeat;
   width: 4px;
   height: 7px;
 }
 
 /* line 109, ../scss/main.scss */
 .slider__next-r, .pagination__next-r {
-  background: url('../img/icons-sdc326c2acf.png') 0 -1017px no-repeat;
+  background: url('../img/icons-s65594b9100.png') 0 -1199px no-repeat;
   width: 4px;
   height: 7px;
 }
@@ -374,7 +374,7 @@
 }
 /* line 125, ../scss/main.scss */
 .slider__navi .active {
-  background: #333;
+  background: #ff9f03;
 }
 
 /*main-news*/
@@ -408,14 +408,18 @@
   margin-right: 15px;
   border: 1px solid #d3d3d3;
 }
+/* line 155, ../scss/main.scss */
+.abonements .btn {
+  padding-left: 33px;
+}
 
-/* line 156, ../scss/main.scss */
+/* line 159, ../scss/main.scss */
 .abonements__desc {
   float: left;
   width: 310px;
   overflow: hidden;
 }
-/* line 160, ../scss/main.scss */
+/* line 163, ../scss/main.scss */
 .abonements__desc a {
   border-bottom: 1px solid #bbe4f1;
   font-weight: bold;
@@ -426,18 +430,18 @@
   -ms-transition: border-color 0.5s linear;
   transition: border-color 0.5s linear;
 }
-/* line 165, ../scss/main.scss */
+/* line 168, ../scss/main.scss */
 .abonements__desc a:hover {
   border-bottom: 1px solid #09c;
 }
-/* line 169, ../scss/main.scss */
+/* line 172, ../scss/main.scss */
 .abonements__desc span {
   display: block;
   margin-top: 5px;
   color: #acacac;
   font-size: 14px;
 }
-/* line 174, ../scss/main.scss */
+/* line 177, ../scss/main.scss */
 .abonements__desc span a {
   font-size: 14px;
   font-weight: normal;
