--- a/scss/inner.scss
+++ b/scss/inner.scss
@@ -21,6 +21,7 @@
 		border: 1px solid #ae6c00;
 		line-height: 30px;
 		font-weight: bold;
+		padding-left: 33px;
 		&:active {
 			line-height: 32px;
 		}
