--- a/scss/main.scss
+++ b/scss/main.scss
@@ -123,7 +123,7 @@
 		cursor: pointer;
 	}
 	.active {
-		background: #333;
+		background: #ff9f03;
 	}
 }
 /*main-news*/
@@ -152,6 +152,9 @@
 			}
 		}
 	}	
+	.btn {
+		padding-left: 33px;
+	}
 }
 .abonements__desc {
 	float: left;
